# aiosales

./: .gitignore  .isort.cfg  main.py  pyproject.toml
aiosales/: containers.py  database.py  endpoints.py  main.py  models.py  pydantic_models.py  repositories.py  services.py
aiosales-stubs/: containers.pyi  endpoints.pyi  models.pyi
aiosales-stubs/repositories/: __init__.pyi  abstract.pyi  delivery.pyi  order.pyi  product.pyi  shop.pyi
aiosales-stubs/services/: orders.pyi
aiosales/repositories/: abstract.py  delivery.py  order.py  product.py  shop.py
aiosales/services/: orders.py
src/aiosales/: constants.py  containers.py  endpoints.py  main.py  models.py  pydantic_models.py  utils.py
src/aiosales-stubs/: constants.pyi  containers.pyi  endpoints.pyi  models.pyi  pydantic_models.pyi  utils.pyi
src/aiosales-stubs/repositories/: abstract.pyi  delivery.pyi  order.pyi  product.pyi  shop.pyi
src/aiosales-stubs/services/: orders.pyi  products.pyi  shops.pyi
src/aiosales/configs/: config-example.yml
src/aiosales/repositories/: __init__.py  abstract.py  delivery.py  order.py  product.py  shop.py
src/aiosales/services/: orders.py  products.py  shops.py
src/aiosales/templates/: report.html
tests/: test_aiosales.py
