[tool.poetry]
name = "aiosales"
version = "0.1.0"
description = ""
authors = ["Sergey Sitnikov <donserhio@tut.by>"]

[tool.poetry.dependencies]
python = "^3.8"
tortoise-orm = "^0.18.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.30.1"

[tool.poetry.scripts]
server = "aiosales.main:start"

[tool.isort]
known_third_party = "dependency_injector"
profile = "google"
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
